--- a/Views/Navigator/AboutUs.cshtml
+++ b/Views/Navigator/AboutUs.cshtml
@@ -90,16 +90,17 @@
           </div>
         </div>
       </div>
-
+      <div class="text-center my-5">
       <img src="/assets/img/animate_icon/Shape-1.png" alt="" class="feature_icon_1" />
       <img src="/assets/img/animate_icon/Shape-14.png" alt="" class="feature_icon_2" />
       <img src="/assets/img/animate_icon/Shape.png" alt="" class="feature_icon_3" />
       <img src="/assets/img/animate_icon/shape-3.png" alt="" class="feature_icon_4" />
+      </div>
     </section>
     <!-- upcoming_event part start-->
 
     <!-- about_us part start-->
-    <section class="about_us section_padding">
+    <section class="about_us">
       <div class="container">
         <div class="row align-items-center justify-content-between">
           <div class="col-md-6 col-lg-5">
@@ -121,15 +122,15 @@
           </div>
         </div>
       </div>
-      <img src="/assets/img/left_sharp.png" alt="" class="left_shape_1" />
-      <img src="/assets/img/about_shape.png" alt="" class="about_shape_1" />
+      <div class="text-center my-5">
       <img src="/assets/img/animate_icon/Shape-16.png" alt="" class="feature_icon_1" />
       <img src="/assets/img/animate_icon/Shape-1.png" alt="" class="feature_icon_4" />
+      </div>
     </section>
     <!-- about_us part end-->
 
     <!-- cta part start-->
-    <section class="cta_part section_padding">
+    <section class="cta_part">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-8 col-xl-6">
