--- a/Views/Shared/_AboutLayout.cshtml
+++ b/Views/Shared/_AboutLayout.cshtml
@@ -116,8 +116,8 @@
                       class="dropdown-menu"
                       aria-labelledby="navbarDropdown_2"
                     >
-                      <a class="nav-link" asp-action="ContactUs" asp-controller="Navigator">Contact Us</a>
-                      <a class="nav-link" asp-action="AboutUs" asp-controller="Navigator">About Us</a>
+                      <a class="dropdown-item" asp-action="ContactUs" asp-controller="Navigator">Contact Us</a>
+                      <a class="dropdown-item" asp-action="AboutUs" asp-controller="Navigator">About Us</a>
                     </div>
                   </li>
 
@@ -151,10 +151,10 @@
               </div>
               <div class="hearer_icon d-flex">
                 <a id="search_1" href="javascript:void(0)">
-                    <span class="iconify" data-icon="ei:search" data-width="20" data-height="20"></span>
+                    <i class="fa-solid fa-magnifying-glass"></i>
                 </a>
                 <a href="">
-                    <span class="iconify" data-icon="akar-icons:heart" data-width="20" data-height="20"></span>
+                    <i class="fa-solid fa-heart color-red" style="color:red"></i>
                 </a>
                 <div class="dropdown cart">
                   <a
@@ -166,7 +166,7 @@
                     aria-haspopup="true"
                     aria-expanded="false"
                   >
-                    <span class="iconify" data-icon="bi:cart-plus-fill" data-width="20" data-height="20"></span>
+                    <i class="fa-solid fa-cart-shopping" style="color:blue"></i>
                   </a>
                 </div>
               </div>
@@ -183,10 +183,10 @@
                     else
                     {
                         <li class="nav-item">
-                        <a class="nav-link  btn btn-outline-primary" asp-action="Login" asp-controller="Account"> Login</a>
+                        <a class="nav-link  btn btn-outline-primary mx-2" asp-action="Login" asp-controller="Account"> Login</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link  btn btn-primary" asp-action="Register" asp-controller="Account"> Register</a>
+                        <a class="nav-link  btn btn-primary text-white" asp-action="Register" asp-controller="Account"> Register</a>
                       </li>
                                     
                     }
