--- a/Views/Shared/_AboutLayout.cshtml
+++ b/Views/Shared/_AboutLayout.cshtml
@@ -147,7 +147,8 @@
                     href="#"
                     id="navbarDropdown3"
                     role="button"
-                    data-toggle="dropdown"
+                    data-toggle="modal"
+                    data-target="#exampleModal"
                     aria-haspopup="true"
                     aria-expanded="false"
                   >
