--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -7511,6 +7511,12 @@ h6 {
   background-repeat: no-repeat;
   background-size: cover;
 }
+.breadcrumb_bg_home {
+  background-image: url("../assets/img/banner_img.png");
+  background-position: right;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
 /* line 5, ../../01 cl html template/03_jun 2019/188_Aranoz shop_html/sass/_breadcrumb.scss */
 .breadcrumb {
