--- a/Views/Shared/_AboutLayout.cshtml
+++ b/Views/Shared/_AboutLayout.cshtml
@@ -124,10 +124,10 @@
                       class="dropdown-menu"
                       aria-labelledby="navbarDropdown_2"
                     >
-                    <a class="dropdown-item" asp-action="RegisterAdmin" asp-controller="Account">Products List</a>
+                    <a class="dropdown-item" asp-action="RegisterAdmin" asp-controller="Account">Register Admin</a>
                       <a class="dropdown-item" asp-action="List" asp-controller="Products">Products List</a>
-                      <a class="dropdown-item" asp-action="Create" asp-controller="Prodycts">Add Product</a>
-                      <a class="dropdown-item" asp-action="Index" asp-controller="Categories">Categories List</a>
+                      <a class="dropdown-item" asp-action="Create" asp-controller="Products">Add Product</a>
+                      <a class="dropdown-item" asp-action="List" asp-controller="Categories">Categories List</a>
                       <a class="dropdown-item" asp-action="Create" asp-controller="Categories">Add Category</a>
                     </div>
                   </li>
