--- a/Views/Shared/_AboutLayout.cshtml
+++ b/Views/Shared/_AboutLayout.cshtml
@@ -191,11 +191,8 @@
               placeholder="Search Here"
             />
             <button type="submit" class="btn"></button>
-            <span
-              class="ti-close it"
-              id="close_search"
-              title="Close Search"
-            ></span>
+            <i class="fa fa-close mt-2 text-white" id="close_search"
+              title="Close Search"></i>
           </form>
         </div>
       </div>
