--- a/Views/Shared/_AboutLayout.cshtml
+++ b/Views/Shared/_AboutLayout.cshtml
@@ -163,7 +163,7 @@
                             Welcome @User.Identity.Name
                         </li> 
                            <li class="nav-item">
-                        <a class="nav-link  btn btn-primary" asp-action="Logout" asp-controller="Account"> Logout</a>
+                        <a class="nav-link  btn btn-primary" onclick='GotToLogOut()' @*asp-action="Logout" asp-controller="Account"*@> Logout</a>
                       </li>         
                     }
                     else
