--- a/Views/Account/RegisterAdmin.cshtml
+++ b/Views/Account/RegisterAdmin.cshtml
@@ -1,56 +1,69 @@
 ﻿@model Project.ViewModels.RegisterVM
 
 @{
-    ViewData["Title"] = "RegisterAdmin";
+	ViewData["Title"] = "RegisterAdmin";
+	Layout = "_CreateLayout";
 }
 
-<h1>RegisterAdmin</h1>
 
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="RegisterAdmin">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="UserName" class="control-label"></label>
-                <input asp-for="UserName" class="form-control" />
-                <span asp-validation-for="UserName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Address" class="control-label"></label>
-                <input asp-for="Address" class="form-control" />
-                <span asp-validation-for="Address" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ConfirmPassword" class="control-label"></label>
-                <input asp-for="ConfirmPassword" class="form-control" />
-                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Role" class="control-label"></label>
-                <input asp-for="Role" class="form-control" />
-                <span asp-validation-for="Role" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
+<div class="container">
+	<h1 class="l font-italic text-muted">Register Admin</h1>
+	<div class="section-top-border">
+		<div class="row">
+			<div class="col-lg-8 col-md-8">
+				<form asp-action="RegisterAdmin">
+					<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+					<div class="mt-10">
+						<label asp-for="UserName" class="form-label font-italic text-muted "></label>
+						<input asp-for="UserName" placeholder="Name"
+							   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Name'" required
+							   class="single-input-secondary">
+						<span asp-validation-for="UserName" class="text-danger"></span>
+					</div>
+					<div class="mt-10">
+						<label asp-for="Address" class="form-label font-italic text-muted "></label>
+						<input asp-for="Address" placeholder="Address"
+							   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Address'" required
+							   class="single-input-secondary">
+						<span asp-validation-for="Address" class="text-danger"></span>
+					</div>
+					<div class="mt-10">
+						<label asp-for="Email" class="form-label font-italic text-muted "></label>
+						<input asp-for="Email" placeholder="Email"
+							   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email'" required
+							   class="single-input-secondary">
+						<span asp-validation-for="Email" class="text-danger"></span>
+					</div>
+					<div class="mt-10">
+						<label asp-for="Password" class="form-label font-italic text-muted "></label>
+
+						<input asp-for="Password" placeholder="Password"
+							   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'" required
+							   class="single-input-secondary">
+						<span asp-validation-for="Password" class="text-danger"></span>
+					</div>
+					<div class="mt-10">
+
+						<label asp-for="ConfirmPassword" class="form-label font-italic text-muted "></label>
+
+						<input asp-for="ConfirmPassword" placeholder="ConfirmPassword"
+							   onfocus="this.placeholder = ''" onblur="this.placeholder = 'ConfirmPassword'" required
+							   class="single-input-secondary">
+						<span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+					</div>
+					<div class="mt-10">
+						<input type="submit" value="Create" class="btn btn-primary" />
+						<a asp-controller="categories" asp-action="Index" class="btn btn-danger">Back to List</a>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+	await Html.RenderPartialAsync("_ValidationScriptsPartial");
+}
 }
