--- a/Views/Categories/Create.cshtml
+++ b/Views/Categories/Create.cshtml
@@ -1,96 +1,74 @@
-﻿@model Project.Models.Category
+﻿@model Category
+
+
 
 @{
-
     ViewData["Title"] = "Create";
-	Layout = "_CreateLayout";
+    Layout = "_CreateLayout";
 }
 
+
+
 <div class="container ">
-	<h1 class="l font-italic text-muted">Create Category</h1>
-	<div class="section-top-border">
-		<div class="row">
-			<div class="col-lg-8 col-md-8">
-				<form asp-action="Create" enctype="multipart/form-data">
-					<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <h1 class="l font-italic text-muted">Create Category</h1>
+    <div class="section-top-border">
+        <div class=" row">
+            <div class="col-lg-8 col-md-8">
+                <form asp-action="Create" enctype="multipart/form-data">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-					<div class="mt-10">
-						<label asp-for="Name" class="form-label font-italic text-muted "></label>
 
-						<input asp-for="Name" placeholder="Name"
-							   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Name'" required
-							   class="single-input-secondary">
-						<span asp-validation-for="Name" class="text-danger"></span>
-					</div>
 
-             <div class="mt-10">
-						<label asp-for="Description" class="form-label font-italic text-muted "></label>
+                    <div class="mt-10">
+                        <label asp-for="Name" class="form-label font-italic text-muted "></label>
 
-						<input asp-for="Description" placeholder="Description"
-							   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Name'" required
-							   class="single-input-secondary">
-						<span asp-validation-for="Description" class="text-danger"></span>
-					</div>
 
-              <div class="mt-10">
-						<label asp-for="imgFile" class="form-label font-italic text-muted "></label>
 
-						<input asp-for="imgFile" placeholder="image"
-							   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Name'" required
-							   class="single-input-secondary">
-						<span asp-validation-for="imgFile" class="text-danger"></span>
-					</div>
-            
+                        <input asp-for="Name" placeholder="Name"
+                               onfocus="this.placeholder = ''" onblur="this.placeholder = 'Name'" required
+                               class="single-input-secondary">
+                        <span asp-validation-for="Name" class="text-danger"></span>
+                    </div>
+                    <div class="mt-10">
+                        <label asp-for="Description" class="form-label font-italic text-muted "></label>
 
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
-                </label>
+
+
+                        <input asp-for="Description" placeholder="Description"
+                               onfocus="this.placeholder = ''" onblur="this.placeholder = 'Name'" required
+                               class="single-input-secondary">
+                        <span asp-validation-for="Description" class="text-danger"></span>
+                    </div>
+
+
+
+                    <div class="mt-10">
+                        <label asp-for="imgFile" class="form-label font-italic text-muted "></label>
+
+
+
+                        <input asp-for="imgFile" placeholder="image"
+                               onfocus="this.placeholder = ''" onblur="this.placeholder = 'Name'" required
+                               class="single-input-secondary">
+                        <span asp-validation-for="imgFile" class="text-danger"></span>
+                    </div>
+
+
+
+                    <div class="form-group form-check">
+                        <label class="form-check-label">
+                            <input class="form-check-input" asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Create" class="btn btn-primary" />
+                        <a asp-action="Index" class="btn btn-danger">Back to List</a>
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-				<a asp-action="Index" class="btn btn-danger">Back to List</a>
-            </div>
-        </form>
+        </div>
     </div>
 </div>
-   </div>
-
-
-					<div class="mt-10">
-						<label asp-for="Description" class="form-label font-italic text-muted"></label>
-
-						<input asp-for="Description" placeholder="Description" onfocus="this.placeholder = ''"
-							   onblur="this.placeholder = 'Description'" required class="single-input-secondary">
-						<span asp-validation-for="Description" class="text-danger"></span>
-					</div>
-					<div class="mt-10">
-						<label asp-for="imgFile" class="form-label font-italic text-muted"></label>
-
-						<input asp-for="imgFile" placeholder="imgFile" onfocus="this.placeholder = ''"
-							   onblur="this.placeholder = 'imgFile'" required class="single-input-secondary">
-						<span asp-validation-for="imgFile" class="text-danger"></span>
-					</div>
-					<div class="form-group form-check">
-						<label class="form-check-label">
-							<input class="form-check-input" asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
-						</label>
-					</div>
-					<div class="form-group">
-						<input type="submit" value="Create" class="btn btn-primary" />
-						<a asp-action="Index" class="btn btn-danger">Back to List</a>
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
-</div>
-
-
-
-
-
-
 
 
 
